--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -27,10 +27,10 @@
 	<div class="playerDecide active">
 		<ul class="playerList01">
 			<li>
-				<img src="../../public/images/web/ico_penguin01.png" alt="">
+				<img src="../../public/images/web/ico_penguin01.png" alt=""><span>ペンギン</span>
 			</li>
 			<li>
-				<img src="../../public/images/web/ico_bear01.png" alt="">
+				<img src="../../public/images/web/ico_bear01.png" alt=""><span>シロクマ</span>
 			</li>
 		</ul>
 		<ul class="btnList02">
