スライダー実装中

--- a/public/css/web/import_multi.css
+++ b/public/css/web/import_multi.css
@@ -3,4 +3,5 @@
 */
 
 @import url("/tobe_master/public/css/web/reset.css");
+@import url("/tobe_master/public/css/web/swiper.min.css");
 @import url("/tobe_master/public/css/web/multi.css");
