--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -27,10 +27,10 @@
 	<div class="playerDecide">
 		<ul class="playerList01">
 			<li>
-				<img src="../../public/images/web/ico_penguin01.png" alt=""><span>ペンギン</span>
+				<img src="/tobe_master/public/images/web/ico_penguin01.png" alt=""><span>ペンギン</span>
 			</li>
 			<li>
-				<img src="../../public/images/web/ico_bear01.png" alt=""><span>シロクマ</span>
+				<img src="/tobe_master/public/images/web/ico_bear01.png" alt=""><span>シロクマ</span>
 			</li>
 		</ul>
 		<ul class="btnList02">
@@ -48,7 +48,7 @@
 		<div class="playerConfirm">
 			<h2>プレイヤー確認</h2>
 			<div class="playerArea">
-				<p><img src="../../public/images/web/ico_animal01.png" alt=""></p>
+				<p><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
 				<p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
 			</div>
 			<div class="outputQuestion">
@@ -61,10 +61,10 @@
 			<div class="swiper-container">
 				<ul class="swiper-wrapper slider questionImg">
 					<li class="swiper-slide">
-						<img src="../../public/images/web/dummy.png" alt="">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
 					</li>
 					<li class="swiper-slide">
-						<img src="../../public/images/web/dummy.png" alt="">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
 					</li>
 				</ul>
 				<div class="swiper-pagination"></div>
@@ -79,7 +79,7 @@
 			</div>
 			<div class="time"><div class="timebar"></div></div>
 			<div class="playerArea">
-				<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
+				<p><img src="/tobe_master/public/images/web/ico_animal01.png" alt="" class="icon"></p>
 				<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
 			</div>
 			<ul class="answerArea">
@@ -93,10 +93,10 @@
 	<div class="sec02">
 		<ul class="swiper-wrapper slider questionImg">
 			<li class="swiper-slide">
-				<img src="../../public/images/web/dummy.png" alt="">
+				<img src="/tobe_master/public/images/web/dummy.png" alt="">
 			</li>
 			<li class="swiper-slide">
-				<img src="../../public/images/web/dummy.png" alt="">
+				<img src="/tobe_master/public/images/web/dummy.png" alt="">
 			</li>
 		</ul>
 		<div class="textArea question">
@@ -118,10 +118,10 @@
 	<div class="sec03">
 		<ul class="swiper-wrapper slider questionImg">
 			<li class="swiper-slide">
-				<img src="../../public/images/web/dummy.png" alt="">
+				<img src="/tobe_master/public/images/web/dummy.png" alt="">
 			</li>
 			<li class="swiper-slide">
-				<img src="../../public/images/web/dummy.png" alt="">
+				<img src="/tobe_master/public/images/web/dummy.png" alt="">
 			</li>
 		</ul>
 		<div class="textArea answer">
@@ -145,13 +145,13 @@
 				<h3>正解者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 				</ul>
 			</div>
@@ -159,7 +159,7 @@
 				<h3>不正解者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+						<img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
 					</li>
 				</ul>
 			</div>
@@ -167,7 +167,7 @@
 				<h3>脱落者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+						<img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
 					</li>
 				</ul>
 			</div>
@@ -182,14 +182,14 @@
 		<h2>GAME OVER</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">4</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
@@ -207,7 +207,7 @@
 		<h2>GAME CLEAR</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="master">MASTER</p>
 					<p class="playerName">シロクマ</p>
@@ -215,21 +215,21 @@
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">4</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
+				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
