トップとクイズ画面の切り離し

--- a/templates/web/quiz_top.html
+++ b/templates/web/quiz_top.html
@@ -3,17 +3,44 @@
     Created by HIR0Y0SHI on 2017/05/31
 
     クイズ画面TOPのHTML
-    この画面で、モード選択をする
  -->
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>とべマスター</title>
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_top.css">
+	<title>めざせ！とべマスター</title>
 </head>
 <body>
-    <h1>（テストタイトル）TOP</h1>
+	<div class="contentIn">
+		<!-- トップページ -->
+		<div class="index">
+			<h1>めざせ！とべマスター</h1>
+			<ul class="btnList01">
+				<li><button type="button" class="btnStyle06 start" value="">はじめる</button></li>
+				<li><button type="button" class="btnStyle07 rule" value="">ルール説明</button></li>
+			</ul>
+		</div>
 
+		<!-- 人数選択画面 -->
+		<div class="playerDecide">
+			<ul class="playerList01">
+				<li>
+					<img src="/tobe_master/public/images/web/ico_penguin01.png" alt=""><span>ペンギン</span>
+				</li>
+				<li>
+					<img src="/tobe_master/public/images/web/ico_bear01.png" alt=""><span>シロクマ</span>
+				</li>
+			</ul>
+			<ul class="btnList02">
+				<li><button type="button" class="btnStyle08 minus" value="">減らす</button></li>
+				<li><button type="button" class="btnStyle08 plus" value="">増やす</button></li>
+			</ul>
+			<div class="next">
+				<button type="button" class="btnStyle03" value="">ゲームを開始する</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
