--- a/templates/management/area.html
+++ b/templates/management/area.html
@@ -70,7 +70,7 @@
 							<form method="post" action="/tobe_master/management/area/update">
 								<p>エリア名を入力して下さい。</p>
 								<input type="hidden" name="beast_house_id" value="{{ item['beast_house_id'] }}">
-								<input type="text" class="form-control" name="area_name" id="area{{ item['beast_house_id'] }}" placeholder="エリア名を入力して下さい" required>
+								<input type="text" class="form-control" name="area_name" id="area{{ item['beast_house_id'] }}" placeholder="エリア名を入力して下さい" value="{{ item['name'] }}" required>
 								<input type="submit" class="form-control btn btn-primary update" name="update" value="変更">
 							</form>
 						</div>
@@ -88,6 +88,8 @@
 						<div class="modal-body">
 							<form method="post" action="/tobe_master/management/area/delete">
 								<p>削除してよろしいですか？</p>
+								<p>エリアID : {{ item['beast_house_id'] }}</p>
+								<p>エリア名 : {{ item['name'] }}</p>
 								<input type="hidden" class="form-control" name="beast_house_id" id="beast_house_id" value="{{ item['beast_house_id'] }}">
 								<input type="submit" class="form-control btn btn-primary deletecheck" name="delete" value="削除">
 							</form>
