--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -88,7 +88,7 @@
                 <p class="answerBtn btnStyle02">あああああ</p>
             </div>
             <div class="next">
-                <button type="button" class="btnStyle03" value="">解説へ</button>
+                <button type="button" class="btnStyle03 next" value="">解説へ</button>
             </div>
         </div>
 
