common.cssとtop/multi.cssきりはなし、スライダー修正もろもろ

--- a/public/css/web/import_multi.css
+++ b/public/css/web/import_multi.css
@@ -4,4 +4,5 @@
 
 @import url("/tobe_master/public/css/web/reset.css");
 @import url("/tobe_master/public/css/web/swiper.min.css");
+@import url("/tobe_master/public/css/web/common.css");
 @import url("/tobe_master/public/css/web/multi.css");
