--- a/public/css/web/import_top.css
+++ b/public/css/web/import_top.css
@@ -3,4 +3,5 @@
 */
 
 @import url("/tobe_master/public/css/web/reset.css");
+@import url("/tobe_master/public/css/web/common.css");
 @import url("/tobe_master/public/css/web/top.css");
