HTML修正（スライダー部分）

--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -69,14 +69,19 @@
 
         <!-- 解答画面 -->
         <div class="sec02">
-            <ul class="swiper-wrapper slider questionImg">
-                <li class="swiper-slide">
-                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
-                </li>
-                <li class="swiper-slide">
-                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
-                </li>
-            </ul>
+			<div class="swiper-container">
+				<ul class="swiper-wrapper slider questionImg">
+					<li class="swiper-slide">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
+					</li>
+					<li class="swiper-slide">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
+					</li>
+				</ul>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+			</div>
             <div class="textArea question">
                 <div class="inner">
                     <p class="tC">第<span class="questionNo">1</span>問</p>
@@ -94,14 +99,19 @@
 
         <!-- 解説画面 -->
         <div class="sec03">
-            <ul class="swiper-wrapper slider questionImg">
-                <li class="swiper-slide">
-                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
-                </li>
-                <li class="swiper-slide">
-                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
-                </li>
-            </ul>
+			<div class="swiper-container">
+				<ul class="swiper-wrapper slider questionImg">
+					<li class="swiper-slide">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
+					</li>
+					<li class="swiper-slide">
+						<img src="/tobe_master/public/images/web/dummy.png" alt="">
+					</li>
+				</ul>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+			</div>
             <div class="textArea answer">
                 <div class="inner">
                     <p class="tC">第<span class="questionNo">1</span>問</p>
