--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -93,7 +93,7 @@
                 <p class="answerBtn btnStyle02">あああああ</p>
             </div>
             <div class="next">
-                <button type="button" class="btnStyle03 next" value="">解説へ</button>
+                <button type="button" class="btnStyle03 next02" value="">解説へ</button>
             </div>
         </div>
 
@@ -122,7 +122,7 @@
                 <p>ヌートリアは、カピパラと比べ前歯が見えやすく色もオレンジ色をしています。また、ヌートリアには長い尻尾がありますがカピバラにはありません。</p>
             </div>
             <div class="next">
-                <button type="button" class="btnStyle03" value="">みんなの解答結果へ</button>
+                <button type="button" class="btnStyle03 next03" value="">みんなの解答結果へ</button>
             </div>
         </div>
 
@@ -160,7 +160,7 @@
                     </ul>
                 </div>
                 <div class="next">
-                    <button type="button" class="btnStyle03" value="">次の問題へ</button>
+                    <button type="button" class="btnStyle03 next04" value="">次の問題へ</button>
                 </div>
             </div>
         </div>
