正解者／脱落者画面修正

--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -133,13 +133,13 @@
                     <h3>正解者</h3>
                     <ul class="playerList02">
                         <li>
-                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt="">
                         </li>
                         <li>
-                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt="">
                         </li>
                         <li>
-                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt="">
                         </li>
                     </ul>
                 </div>
@@ -147,7 +147,7 @@
                     <h3>不正解者</h3>
                     <ul class="playerList02">
                         <li>
-                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt="">
                         </li>
                     </ul>
                 </div>
@@ -155,7 +155,7 @@
                     <h3>脱落者</h3>
                     <ul class="playerList02">
                         <li>
-                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt="">
                         </li>
                     </ul>
                 </div>
