--- a/public/css/web/common.css
+++ b/public/css/web/common.css
@@ -315,12 +315,22 @@ div.next {
   justify-content: center;
   -webkit-align-items: center;
   align-items: center;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: 20vh;
-  padding: 2% 4%;
+  padding: 2%;
   text-align: center;
   border-radius: 5px;
   background-color: #fff;
+}
+.playerList02 > li {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.playerList02 > li > img {
+  width: auto;
+  max-width: 100%;
 }
 
 .playerList03 {
