--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -24,7 +24,7 @@
                 <h2>プレイヤー確認</h2>
                 <div class="playerArea">
                     <p><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-                    <p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
+                    <p class="playerName">あなたは<span class="animal"></span>さんですか？</p>
                 </div>
                 <div class="outputQuestion">
                     <button type="button" class="btnStyle03 outputQuestion" value="">はい</button>
@@ -69,19 +69,19 @@
 
         <!-- 解答画面 -->
         <div class="sec02">
-			<div class="swiper-container">
-				<ul class="swiper-wrapper slider questionImg">
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-				</ul>
-				<div class="swiper-pagination"></div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-			</div>
+            <div class="swiper-container">
+                <ul class="swiper-wrapper slider questionImg">
+                    <li class="swiper-slide">
+                        <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                    </li>
+                    <li class="swiper-slide">
+                        <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                    </li>
+                </ul>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
             <div class="textArea question">
                 <div class="inner">
                     <p class="tC">第<span class="questionNo">1</span>問</p>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="correctArea">
-                <p class="answerBtn btnStyle02">あああああ</p>
+                <p class="answerBtn btnStyle02 correct">あああああ</p>
             </div>
             <div class="next">
                 <button type="button" class="btnStyle03 next02" value="">解説へ</button>
@@ -99,19 +99,19 @@
 
         <!-- 解説画面 -->
         <div class="sec03">
-			<div class="swiper-container">
-				<ul class="swiper-wrapper slider questionImg">
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-				</ul>
-				<div class="swiper-pagination"></div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-			</div>
+            <div class="swiper-container">
+                <ul class="swiper-wrapper slider questionImg">
+                    <li class="swiper-slide">
+                        <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                    </li>
+                    <li class="swiper-slide">
+                        <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                    </li>
+                </ul>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
             <div class="textArea answer">
                 <div class="inner">
                     <p class="tC">第<span class="questionNo">1</span>問</p>
