--- a/templates/web/quiz_top.html
+++ b/templates/web/quiz_top.html
@@ -27,10 +27,22 @@
 		<div class="playerDecide">
 			<ul class="playerList01">
 				<li>
-					<img src="/tobe_master/public/images/web/ico_penguin01.png" alt=""><span>ペンギン</span>
+					<img src="/tobe_master/public/images/web/ico_penguin01.jpg" alt=""><span>ペンギン</span>
 				</li>
 				<li>
-					<img src="/tobe_master/public/images/web/ico_bear01.png" alt=""><span>シロクマ</span>
+					<img src="/tobe_master/public/images/web/ico_bear01.jpg" alt=""><span>シロクマ</span>
+				</li>
+				<li>
+					<img src="/tobe_master/public/images/web/ico_tiger01.jpg" alt=""><span>トラ</span>
+				</li>
+				<li>
+					<img src="/tobe_master/public/images/web/ico_rabbit01.jpg" alt=""><span>ウサギ</span>
+				</li>
+				<li>
+					<img src="/tobe_master/public/images/web/ico_fox01.jpg" alt=""><span>キツネ</span>
+				</li>
+				<li>
+					<img src="/tobe_master/public/images/web/ico_elephant01.jpg" alt=""><span>ゾウ</span>
 				</li>
 			</ul>
 			<ul class="btnList02">
