--- a/templates/management/area.html
+++ b/templates/management/area.html
@@ -23,6 +23,7 @@
 			<div class="link">
 				<a href="http://localhost/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
 				<a href="http://localhost/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
+				<a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
 			</div>
 		</div>
 
