--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -26,6 +26,7 @@
         <div class="link">
           <a href="http://localhost/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
           <a href="http://localhost/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
+          <a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
         </div>
       </div>
       <!-- class=col-md-12 -->
