--- a/templates/management/topquestion.html
+++ b/templates/management/topquestion.html
@@ -30,6 +30,13 @@
 			border: 1px solid #B2B2B2;
 			border-radius: 5px;
 		}
+
+		/*.problem {
+			width: 300px;
+			white-space: nowrap;
+	  	overflow: hidden;
+	  	text-overflow: ellipsis;
+		}*/
 	</style>
 
 </head>
@@ -41,6 +48,7 @@
 			<div class="link">
 				<a href="http://localhost/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
 				<a href="http://localhost/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
+				<a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
 			</div>
 		</div>
 
@@ -63,7 +71,7 @@
 		<tr>
 			<th scope="row" class="num">{{ question['question_id'] }}</th>
 			<td>{{ question['title'] }}</td>
-			<td>{{ question['problem_statement'] }}</td>
+			<td class="introduction">{{ question['problem_statement'] }}</td>
 			<td>{{ question['name'] }}</td>
 			<td><button type="button"  data-toggle="modal" data-target="#{{ question['question_id'] }}">編集</button></td>
 			<td><button type="button"  data-toggle="modal" data-target="#questiondelete{{ question['question_id'] }}">削除</button></td>
