問題文の表示文字制限

--- a/public/css/management/topquiz.css
+++ b/public/css/management/topquiz.css
@@ -82,10 +82,9 @@ margin-right: 5px;
   text-align: center;
 }
 .introduction {
-  width: 450px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  width: 400px;
+  text-align: center;
+  visibility: hidden;
 }
 .area {
   width: 200px;
