--- a/templates/management/topquestion.html
+++ b/templates/management/topquestion.html
@@ -13,6 +13,24 @@
 	<script src="/tobe_master/public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	<script src="/tobe_master/public/js/management/makeQuestion2.js"></script>
 	<link href="/tobe_master/public/css/management/topquiz.css" rel="stylesheet">
+	<script>
+$(function(){
+    var $setElm = $('.introduction');
+    var cutFigure = '15'; // カットする文字数
+    var afterTxt = ' …'; // 文字カット後に表示するテキスト
+
+    $setElm.each(function(){
+        var textLength = $(this).text().length;
+        var textTrim = $(this).text().substr(0,(cutFigure))
+
+        if(cutFigure < textLength) {
+            $(this).html(textTrim + afterTxt).css({visibility:'visible'});
+        } else if(cutFigure >= textLength) {
+            $(this).css({visibility:'visible'});
+        }
+    });
+});
+</script>
 	<style type="text/css">
 
 		.modal-content{
